--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 @layer base {
   /*  */
   .container {
-    @apply w-full px-4 sm:px-8 md:px-20 lg:px-40 ;
+    @apply w-full px-4 sm:px-8 md:px-20 lg:px-40 xl:px-56;
   }
   .flex-center {
     @apply flex items-center justify-center ;
@@ -20,7 +20,13 @@ body {
   .neo {
     @apply hover:translate-x-[0.25rem] hover:translate-y-[0.25rem] hover:shadow-[0rem_0rem_0px_0px_rgba(0,0,0,1)] shadow-[0.25rem_0.25rem_0px_0px_rgba(0,0,0,1)] px-3 py-2 duration-150 border border-black
   }
+  .neo-default {
+    @apply shadow-[0.25rem_0.25rem_0px_0px_rgba(0,0,0,1)] px-3 py-2 duration-150 border border-black
+  }
   hr {
     @apply border-t border-black w-full
+  }
+  .badge {
+    @apply bg-black text-white px-4 py-2 rounded-full flex gap-2 items-center text-xs
   }
 }
